// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds quote views decrements quote count when a quote is deleted 1`] = `
Object {
  "posts": Array [
    Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "bobby",
        "handle": "bob.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.images#view",
        "images": Array [
          Object {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(1)/cids(2)@jpeg",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(1)/cids(2)@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label",
        },
        Object {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label-2",
        },
      ],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(2)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(1)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
}
`;

exports[`pds quote views does not return post when quote is deleted 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "posts": Array [
    Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": Array [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": Object {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": Array [
                Object {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 2",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
  "uri": "record(1)",
}
`;

exports[`pds quote views fetches post quotes 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "posts": Array [
    Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": Array [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 2,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": Object {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": Array [
                Object {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 2",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "eve.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(4)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(2)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "ali",
            "handle": "alice.test",
            "labels": Array [
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-a",
              },
              Object {
                "cid": "cids(3)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "user(1)",
                "uri": "record(2)",
                "val": "self-label-b",
              },
            ],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(1)",
          "embeds": Array [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(1)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(1)",
              "uri": "record(1)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 2,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(1)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": Object {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": Array [
                Object {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(1)",
            "uri": "record(1)",
          },
        },
        "text": "qUoTe 1",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(3)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
  ],
  "uri": "record(1)",
}
`;
